Fix #877 - Fixed whitespace

--- a/assets/base.styl
+++ b/assets/base.styl
@@ -1,7 +1,6 @@
 // Styles shared between snow and bubble
 
 controlHeight = 24px
-controlWidth = 24px
 inputPaddingWidth = 5px
 inputPaddingHeight = 3px
 
@@ -202,8 +201,8 @@ colorItemsPerRow = 7
       padding: 4px 0px
     .ql-picker-item
       height: controlHeight
-	  width: controlWidth
-      padding: 2px 4px
+	  width: controlHeight
+	  padding: 2px 4px
   .ql-color-picker
     .ql-picker-options
       padding: inputPaddingHeight inputPaddingWidth
